Closed
Bug 1395121
Opened 8 years ago
Closed 8 years ago
RCWN: NS_NOTREACHED("mListener is null") in nsHttpChannel::OnStartRequest
Categories
(Core :: Networking: HTTP, defect)
Core
Networking: HTTP
Tracking
()
RESOLVED
FIXED
mozilla57
| Tracking | Status | |
|---|---|---|
| firefox57 | --- | fixed |
People
(Reporter: michal, Assigned: michal)
References
Details
(Whiteboard: [necko-active])
Attachments
(1 file)
|
1.10 KB,
patch
|
valentin
:
review+
|
Details | Diff | Splinter Review |
This assertion happens when the channel is canceled after creating mNetworkTriggerTimer and before calling nsHttpChannel::Notify. TriggerNetwork then starts the network request even if mCanceled is true.
| Assignee | ||
Comment 1•8 years ago
|
||
Attachment #8902639 -
Flags: review?(valentin.gosu)
Comment 2•8 years ago
|
||
Comment on attachment 8902639 [details] [diff] [review]
fix
Review of attachment 8902639 [details] [diff] [review]:
-----------------------------------------------------------------
Nice catch. Thanks!
Attachment #8902639 -
Flags: review?(valentin.gosu) → review+
Pushed by mnovotny@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/02b9376bea86
NS_NOTREACHED("mListener is null") in nsHttpChannel::OnStartRequest, r=valentin
Comment 4•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
You need to log in
before you can comment on or make changes to this bug.
Description
•