Bug 1395121 - NS_NOTREACHED("mListener is null") in nsHttpChannel::OnStartRequest, r=valentin